# Moksha-menu

./: AUTHORS  README  TODO  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
debian/: changelog  control  debhelper-build-stamp  files  moksha-menu.install
debian/moksha-menu/DEBIAN/: control  md5sums
desktop-directories/: Makefile.am
layout/: Makefile.am  moksha-applications.menu
po/: POTFILES.in  af.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  fur.po  ga.po  gl.po  gn.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  (+59 more)
